--- a/index.html
+++ b/index.html
@@ -55,34 +55,86 @@
                     </ul>
                 </div>
                 <div class="third-box">
-                    <div class="featured bordrad">
-                        <div class="title gradient">
-                            <h1>Featured</h1>
+                    <div class="featured">
+                        <div class="featured-title gradient">
+                            <h2>Featured</h2>
                         </div>
-                        <div class="featured-row">
-                            <img src="./images/featured.jpg" alt="hairstyle image">
-                            <h3>Daring style and color</h3>
+                        <div class="featured-content bordrad">
+                            <div class="featured-row">
+                                <img src="./images/featured.jpg" alt="hairstyle image">
+                                <h3>Daring style and color</h3>
+                            </div>
+                            <ul class="featured-list">
+                                <li>
+                                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor modi similique
+                                        vero veritatis? Reiciendis officiis sint delectus, modi alias pariatur ab
+                                        aspernatur praesentium rem! Possimus in natus adipisci quod nam.</p>
+                                </li>
+                                <li>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In quasi nesciunt,
+                                        placeat cum, doloremque commodi quaerat quis deleniti eius ratione unde
+                                        repudiandae. Consequuntur aspernatur debitis delectus unde asperiores esse
+                                        necessitatibus!</p>
+                                </li>
+                                <li>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde dolorem error
+                                        nesciunt aliquam illum quasi quaerat neque fuga laboriosam quo! Minima eveniet
+                                        tenetur sint quos excepturi aperiam alias atque quisquam.</p>
+                                </li>
+                            </ul>
                         </div>
-                        <ul class="featured-list">
-                            <li>
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor modi similique vero veritatis? Reiciendis officiis sint delectus, modi alias pariatur ab aspernatur praesentium rem! Possimus in natus adipisci quod nam.</p>
-                            </li>
-                            <li>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In quasi nesciunt, placeat cum, doloremque commodi quaerat quis deleniti eius ratione unde repudiandae. Consequuntur aspernatur debitis delectus unde asperiores esse necessitatibus!</p>
-                            </li>
-                            <li>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde dolorem error nesciunt aliquam illum quasi quaerat neque fuga laboriosam quo! Minima eveniet tenetur sint quos excepturi aperiam alias atque quisquam.</p>
-                            </li>
-                        </ul>
                     </div>
-                    <div>
+                    <div class="hairstyle">
                         <div>
-
+                            <div class="hairstyle-title gradient">
+                                <h2>Hairstyle</h2>
+                            </div>
+                            <div class="hairstyle-content bordrad">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda autem dicta
+                                    dolore impedit labore laborum, maxime modi perspiciatis quis, repellat ullam? Ab
+                                    atque aut hic molestias mollitia odio placeat!</p>
+                            </div>
+                            <div class="loosing-hair hairstyle-content bordrad">
+                                <div class="bald-logo">
+                                    <img src="./images/skinhead.png">
+                                </div>
+                                <div>
+                                    <p>Are you loosing your hair?<br>
+                                    Let us help you in bringing<br>
+                                    back your confidence.<br>
+                                    Call us at 1800-0000-0000</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </main>
+        <foooter>
+            <div class="footer-content">
+                <p>
+                    © copyright 2023 | all rights reserved.
+                </p>
+                <ul class="footer-links">
+                    <li id="twitter">
+                        <a href="https://twitter.com"><img src="./images/icons/icon-twitter2.png" alt="twitter logo" id="twitter-icon">
+                            <img src="./images/icons/icon-twitter2-hover.png" alt="twitter logo" id="twitter-hover"></a>
+                    </li>
+                    <li id="facebook">
+                        <a href="https://facebook.com"><img src="./images/icons/icon-facebook.png" alt="facebook logo" id="facebook-icon">
+                            <img src="./images/icons/icon-facebook-hover.png" alt="facebook logo" id="facebook-hover"></a>
+                    </li>
+                    <li id="google-plus">
+                        <a href="https://plus.google.com"><img src="./images/icons/googleplus.png" alt="google plus logo" id="google-plus-icon">
+                            <img src="./images/icons/googleplus-hover.png" alt="google plus logo" id="google-plus-hover"></a>
+                    </li>
+                    <li id="pinterest">
+                        <a href="https://pinterest.com"><img src="./images/icons/pinterest.png" alt="pinterest logo" id="pinterest-icon">
+                            <img src="./images/icons/pinterest-hover.png" alt="pinterest logo" id="pinterest-hover"></a>
+                    </li>
+                </ul>
+            </div>
+        </foooter>
     </div>
 </body>
 </html>
