Made header items clickable

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
         <header>
             <div class="header-content">
                 <div class="logo gradient">
-                    <h1>HAIRZ</h1>
+                    <h1><a href="#">HAIRZ</a></h1>
                 </div>
                 <nav>
                     <ul class="nav-links">
-                        <li class="dark-blue white bordrad">HOME</li>
-                        <li class="dark white bordrad">ABOUT</li>
-                        <li class="dark white bordrad">HAIRSTYLES</li>
-                        <li class="dark white bordrad">NEWS</li>
-                        <li class="dark white bordrad" id="no-margin-right">CONTACT</li>
+                        <li class="dark-blue white bordrad"><a href="#">HOM</a>E</li>
+                        <li class="dark white bordrad"><a href="#">ABOUT</a></li>
+                        <li class="dark white bordrad"><a href="#">HAIRSTYLES</a></li>
+                        <li class="dark white bordrad"><a href="#">NEWS</a></li>
+                        <li class="dark white bordrad" id="no-margin-right"><a href="#">CONTACT</a></li>
                     </ul>
                 </nav>
             </div>
